fix nav spacing

--- a/style.css
+++ b/style.css
@@ -24,14 +24,15 @@ nav {
     left:0;
     background-color: red;
     width: 100%;
+    height: 32px;
 
     display: flex;
 }
 
 img#nav-logo {
     max-height: 16px;
-    margin-top: 8px;
-    margin-bottom: 8px;
+    margin-top: auto;
+    margin-bottom: auto;
     margin-left:8px;
 }
 
@@ -42,4 +43,6 @@ ul#nav-list {
 
     margin-top: auto;
     margin-bottom: auto;
+
+    padding-left: 16px;
 }
